@@ -44,13 +44,13 @@ class ActionsTest(unittest.TestCase):
         """test command line start router"""
         rtr = self.fs.new_router(self.srv1)
         action = StartRouter(rtr)
-        self.check_cmd(action, "/sbin/modprobe lnet && lctl net up")
+        self.check_cmd(action, "/sbin/modprobe ptlrpc")
 
     def test_stop_router(self):
         """test command line stop router"""
         rtr = self.fs.new_router(self.srv1)
         action = StopRouter(rtr)
-        self.check_cmd(action, "lctl net down ; lustre_rmmod")
+        self.check_cmd(action, "lustre_rmmod")
 
     #
     # Client
