@@ -1,3 +1,6 @@
+2013-08-26 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Automatically load and unload modules when needed (ticket #19).
+
 2013-08-11 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Fix exception when syslog is not available (ticket #160).
 
